feat: clear one by one number at calculator

--- a/index.html
+++ b/index.html
@@ -94,12 +94,16 @@
                 <div class="rectangleButton plus"><i data-feather="plus"></i></div>
             </div>
             <div class="buttons">
-                <div class="rectangleButton zero">
+                <div class="circleButton">
                     <h3>0</h3>
                 </div>
                 <div class="circleButton">
                     <h3>,</h3>
                 </div>
+                <div id="delete" class="circleButton">
+                    <i data-feather="delete" class="delete-icon"></i>
+                </div>
+
                 <div class="rectangleButton equal">
                     <h2>=</h2>
                 </div>
